Fix whitespace in Map CSS

--- a/css/tracker.css
+++ b/css/tracker.css
@@ -45,81 +45,75 @@ td {
   opacity: 0.25;
 }
 
-.mini{
-    width: 16;
-    height: 16;
-    vertical-align: text-bottom;
+.mini {
+  vertical-align: text-bottom;
+  width:          16px;
+  height:         16px;
 }
 
-.boss{
-    width: 24;
-    height: 24;
-
-    background-repeat: no-repeat;
-	background-position: center;
-	background-size: 75% 75%;
-
-    position: absolute;
-    margin-left: -12px;
-    margin-top: -12px;
-
-    z-index: 2;
+.boss {
+  background-repeat:   no-repeat;
+  background-position: center;
+  background-size:     75% 75%;
+  position:            absolute;
+  margin-left:         -12px;
+  margin-top:          -12px;
+  width:                24px;
+  height:               24px;
+  z-index:               2px;
 }
 
-.dungeon{
-    width: 48;
-    height: 48;
-	background-size: 100% 100%;
-
-    position: absolute;
-    margin-left: -24px;
-    margin-top: -24px;
+.dungeon {
+  background-size: 100% 100%;
+  position:        absolute;
+  margin-left:     -24px;
+  margin-top:      -24px;
+  width:           48px;
+  height:          48px;
 }
 
-div{
-    background-image: url("images/map.png");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-
-    position: absolute;
-    width: 884;
-    height: 448;
-    left: 456px;
+#map {
+  background-image:  url(images/map.png);
+  background-size:   100% 100%;
+  background-repeat: no-repeat;
+  position:          absolute;
+  left:              456px;
+  width:             884px;
+  height:            448px;
 }
 
-span{
-    color: white;
-    background-color: rgb(0,0,0);
-    position: absolute;
-    width: 100%;
-    text-align: center;
-    font-size: 16px;
-    font-family: "Times New Roman", Times, serif;
-    bottom: 0px;
+span {
+  background-color: rgb(0,0,0);
+  color:            rgb(255,255,255);
+  font-family:      "Times New Roman", Times, serif;
+  font-size:        16px;
+  position:         absolute;
+  bottom:           0;
+  text-align:       center;
+  width:            100%;
 }
 
-.chest{
-    width: 24;
-    height: 24;
-	background-size: 100% 100%;
-
-    position: absolute;
-    margin-left: -12px;
-    margin-top: -12px;
+.chest {
+  background-size: 100% 100%;
+  position:        absolute;
+  margin-left:     -12px;
+  margin-top:      -12px;
+  width:           24px;
+  height:          24px;
 }
 
-.unavailable{
-    background-color: rgb(255,0,0);
+.unavailable {
+  background-color: rgb(255,0,0);
+}  
+
+.available {
+  background-color: rgb(0,255,0);
 }
 
-.available{
-    background-color: rgb(0,255,0);
+.possible {
+  background-color: rgb(255,255,0);
 }
 
-.possible{
-    background-color: rgb(255,255,0);
-}
-
-.opened{
-    background-color: rgb(127,127,127);
+.opened {
+  background-color: rgb(127,127,127);
 }
